TESTS = check.sh

EXTRA_DIST = \
Makefile \
Makefile.am \
Makefile.in \
check.sh \
data.txt data.gzip data.bin \
arp.abc ref/arp.out ref/arp.pcap \
big.abc ref/big.out ref/big.pcap \
eth-tail.abc ref/eth-tail.out ref/eth-tail.pcap \
frag6-max.abc ref/frag6-max.out ref/frag6-max.pcap \
ftp.abc ref/ftp.out ref/ftp.pcap \
gre.abc ref/gre.out ref/gre.pcap \
hello.abc ref/hello.out ref/hello.pcap \
http.abc ref/http.out ref/http.pcap \
http-gzip.abc ref/http-gzip.out ref/http-gzip.pcap \
icmp4.abc ref/icmp4.out ref/icmp4.pcap \
icmp6.abc ref/icmp6.out ref/icmp6.pcap \
ip4.abc ref/ip4.out ref/ip4.pcap \
ip4-max.abc ref/ip4-max.out ref/ip4-max.pcap \
ip4-tcp-max.abc ref/ip4-tcp-max.out ref/ip4-tcp-max.pcap \
ip4-ttl.abc ref/ip4-ttl.out ref/ip4-ttl.pcap \
ip6.abc ref/ip6.out ref/ip6.pcap \
modbus.abc ref/modbus.out ref/modbus.pcap \
mpls.abc ref/mpls.out ref/mpls.pcap \
ppp.abc ref/ppp.out ref/ppp.pcap \
phy-perm.abc ref/phy-perm.out ref/phy-perm.pcap \
phy-rev.abc ref/phy-rev.out ref/phy-rev.pcap \
phy-sec.abc ref/phy-sec.out ref/phy-sec.pcap \
src-dst.abc ref/src-dst.out ref/src-dst.pcap \
tcp.abc ref/tcp.out ref/tcp.pcap \
tcp-jack.abc ref/tcp-jack.out ref/tcp-jack.pcap \
tcp-jump.abc ref/tcp-jump.out ref/tcp-jump.pcap \
tcp-max.abc ref/tcp-max.out ref/tcp-max.pcap \
tcp-rst.abc ref/tcp-rst.out ref/tcp-rst.pcap \
tcp-seq.abc ref/tcp-seq.out ref/tcp-seq.pcap \
teredo.abc ref/teredo.out ref/teredo.pcap \
udp-len.abc ref/udp-len.out ref/udp-len.pcap \
user-data.abc ref/user-data.out ref/user-data.pcap \
vlan.abc ref/vlan.out ref/vlan.pcap

clean-local:
	rm -rf tmp/

