TESTS = check.sh

EXTRA_DIST = \
Makefile \
Makefile.am \
Makefile.in \
check.sh \
data.txt data.gzip data.bin \
arp.abc ref/arp.pcap \
big.abc ref/big.pcap \
eth-tail.abc ref/eth-tail.pcap \
frag6-max.abc ref/frag6-max.pcap \
ftp.abc ref/ftp.pcap \
gre.abc ref/gre.pcap \
hello.abc ref/hello.pcap \
http.abc ref/http.pcap \
http-gzip.abc ref/http-gzip.pcap \
icmp4.abc ref/icmp4.pcap \
icmp6.abc ref/icmp6.pcap \
ip4.abc ref/ip4.pcap \
ip4-max.abc ref/ip4-max.pcap \
ip4-tcp-max.abc ref/ip4-tcp-max.pcap \
ip4-ttl.abc ref/ip4-ttl.pcap \
ip6.abc ref/ip6.pcap \
modbus.abc ref/modbus.pcap \
mpls.abc ref/mpls.pcap \
ppp.abc ref/ppp.pcap \
phy-perm.abc ref/phy-perm.pcap \
phy-rev.abc ref/phy-rev.pcap \
phy-sec.abc ref/phy-sec.pcap \
src-dst.abc ref/src-dst.pcap \
tcp.abc ref/tcp.pcap \
tcp-jack.abc ref/tcp-jack.pcap \
tcp-jump.abc ref/tcp-jump.pcap \
tcp-max.abc ref/tcp-max.pcap \
tcp-rst.abc ref/tcp-rst.pcap \
tcp-seq.abc ref/tcp-seq.pcap \
teredo.abc ref/teredo.pcap \
udp-len.abc ref/udp-len.pcap \
user-data.abc ref/user-data.pcap \
vlan.abc ref/vlan.pcap

clean-local:
	rm -rf tmp/
	rm -f ref/*.out

